// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mbank-reader > should parse partial CSV file and return operations 1`] = `
[
  {
    "activityDate": "2024-01-01",
    "activityType": "DEPOSIT",
    "amount": 8019.4,
    "assetId": "$CASH-PLN",
    "comment": "LOTS OF MONEY",
    "currency": "PLN",
    "isDraft": false,
  },
  {
    "activityDate": "2024-12-31",
    "activityType": "WITHDRAWAL",
    "amount": 2.72,
    "assetId": "$CASH-PLN",
    "comment": "PODATEK OD ODSETEK KAPITAŁOWYCH",
    "currency": "PLN",
    "isDraft": false,
  },
  {
    "activityDate": "2024-12-30",
    "activityType": "DEPOSIT",
    "amount": 14.27,
    "assetId": "$CASH-PLN",
    "comment": "KAPITALIZACJA ODSETEK",
    "currency": "PLN",
    "isDraft": false,
  },
  {
    "activityDate": "2024-12-30",
    "activityType": "DEPOSIT",
    "amount": 10,
    "assetId": "$CASH-PLN",
    "comment": "Opening Balance",
    "currency": "PLN",
    "isDraft": false,
  },
]
`;

exports[`mbank-reader > should parse whole CSV file and return operations 1`] = `
[
  {
    "activityDate": "2025-01-01",
    "activityType": "WITHDRAWAL",
    "amount": 11.55,
    "assetId": "$CASH-PLN",
    "comment": "CLEAR ACCOUNT",
    "currency": "PLN",
    "isDraft": false,
  },
  {
    "activityDate": "2024-12-31",
    "activityType": "WITHDRAWAL",
    "amount": 2.72,
    "assetId": "$CASH-PLN",
    "comment": "PODATEK OD ODSETEK KAPITAŁOWYCH",
    "currency": "PLN",
    "isDraft": false,
  },
  {
    "activityDate": "2024-12-30",
    "activityType": "DEPOSIT",
    "amount": 14.27,
    "assetId": "$CASH-PLN",
    "comment": "KAPITALIZACJA ODSETEK",
    "currency": "PLN",
    "isDraft": false,
  },
]
`;
